workspace/src/parser.output
Terminals unused in grammar

   T_JH
   T_K_AUTO
   T_RFKH


State 39 conflicts: 1 shift/reduce
State 131 conflicts: 17 shift/reduce
State 224 conflicts: 2 reduce/reduce
State 324 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROGRAM

    2 BASIC_EXPR: T_ID
    3           | T_V_INTEGER
    4           | T_V_FLOAT
    5           | T_V_CHAR
    6           | T_V_STRING
    7           | T_LXKH EXPR T_RXKH

    8 POSTFIX_EXPR: BASIC_EXPR
    9             | POSTFIX_EXPR T_LZKH EXPR T_RZKH
   10             | POSTFIX_EXPR T_LXKH T_RXKH
   11             | POSTFIX_EXPR T_LXKH AGR_LIST T_RXKH
   12             | POSTFIX_EXPR T_DOT T_ID
   13             | POSTFIX_EXPR T_ARROW T_ID
   14             | POSTFIX_EXPR T_ADDADD
   15             | POSTFIX_EXPR T_SUBSUB

   16 AGR_LIST: ASSIGN_EXPR
   17         | AGR_LIST T_DH ASSIGN_EXPR

   18 UNARY_EXPR: POSTFIX_EXPR
   19           | T_ADDADD UNARY_EXPR
   20           | T_SUBSUB UNARY_EXPR
   21           | OPR_UNARY CAST_EXPR
   22           | T_K_SIZEOF UNARY_EXPR
   23           | T_K_SIZEOF T_LXKH TYPE T_RXKH

   24 OPR_UNARY: T_AND
   25          | T_QF
   26          | T_NOT
   27          | T_MUL
   28          | T_ADD
   29          | T_MINUS

   30 CAST_EXPR: UNARY_EXPR
   31          | T_LXKH TYPE T_RXKH CAST_EXPR

   32 MUL_EXPR: CAST_EXPR
   33         | MUL_EXPR T_MUL CAST_EXPR
   34         | MUL_EXPR T_DIV CAST_EXPR
   35         | MUL_EXPR T_MOD CAST_EXPR

   36 ADD_EXPR: MUL_EXPR
   37         | ADD_EXPR T_ADD MUL_EXPR
   38         | ADD_EXPR T_MINUS MUL_EXPR

   39 SHIFT_EXPR: ADD_EXPR
   40           | SHIFT_EXPR T_SHIFT_LEFT ADD_EXPR
   41           | SHIFT_EXPR T_SHIFT_RIGHT ADD_EXPR

   42 RELATION_EXPR: SHIFT_EXPR
   43              | RELATION_EXPR T_LT SHIFT_EXPR
   44              | RELATION_EXPR T_GT SHIFT_EXPR
   45              | RELATION_EXPR T_LE SHIFT_EXPR
   46              | RELATION_EXPR T_GE SHIFT_EXPR

   47 EQ_EXPR: RELATION_EXPR
   48        | EQ_EXPR T_EQ RELATION_EXPR
   49        | EQ_EXPR T_NEQ RELATION_EXPR

   50 AND_EXPR: EQ_EXPR
   51         | AND_EXPR T_AND EQ_EXPR

   52 XOR_EXPR: AND_EXPR
   53         | XOR_EXPR T_XOR AND_EXPR

   54 OR_EXPR: XOR_EXPR
   55        | OR_EXPR T_OR XOR_EXPR

   56 LOGIC_AND_EXPR: OR_EXPR
   57               | LOGIC_AND_EXPR T_LAND OR_EXPR

   58 LOGIC_OR_EXPR: LOGIC_AND_EXPR
   59              | LOGIC_OR_EXPR T_LOR LOGIC_AND_EXPR

   60 CONDITION_EXPR: LOGIC_OR_EXPR
   61               | LOGIC_OR_EXPR T_WH EXPR T_MH CONDITION_EXPR

   62 ASSIGN_EXPR: CONDITION_EXPR
   63            | UNARY_EXPR ASSIGN ASSIGN_EXPR

   64 ASSIGN: T_ASSIGN
   65       | T_ADD_ASSIGN
   66       | T_SUB_ASSIGN
   67       | T_MUL_ASSIGN
   68       | T_DIV_ASSIGN
   69       | T_AND_ASSIGN
   70       | T_OR_ASSIGN

   71 EXPR: ASSIGN_EXPR
   72     | EXPR T_DH ASSIGN_EXPR

   73 REGULAR_EXPR: CONDITION_EXPR

   74 DECLARATION: TYPE_PART T_FH
   75            | TYPE_PART TERMS_LIST T_FH

   76 TYPE_PART: STORE_CLASS
   77          | STORE_CLASS TYPE_PART
   78          | REGULAR_TYPE
   79          | REGULAR_TYPE TYPE_PART
   80          | QUALIFIER_TYPE
   81          | QUALIFIER_TYPE TYPE_PART

   82 TERMS_LIST: TERM
   83           | TERMS_LIST T_DH TERM

   84 TERM: DECLARATOR
   85     | DECLARATOR T_ASSIGN INITIALIZER

   86 STORE_CLASS: T_K_TYPEDEF
   87            | T_K_EXTERN
   88            | T_K_STATIC

   89 REGULAR_TYPE: T_K_VOID
   90             | T_K_CHAR
   91             | T_K_SHORT
   92             | T_K_INT
   93             | T_K_LONG
   94             | T_K_FLOAT
   95             | T_K_DOUBLE
   96             | T_K_SIGNED
   97             | T_K_UNSIGNED
   98             | STRUCT_UNION_TYPE
   99             | SPECIFIER_ENUM

  100 STRUCT_UNION_TYPE: STRUCT_UNION T_ID T_LDKH STRUCT_UNION_LIST T_RDKH
  101                  | STRUCT_UNION T_LDKH STRUCT_UNION_LIST T_RDKH
  102                  | STRUCT_UNION T_ID

  103 STRUCT_UNION: T_K_STRUCT
  104             | T_K_UNION

  105 STRUCT_UNION_LIST: STRUCT_UNION_DECLARATION
  106                  | STRUCT_UNION_LIST STRUCT_UNION_DECLARATION

  107 STRUCT_UNION_DECLARATION: LIST_SPEC_QUAL LIST_STRUCT_DECLARATOR T_FH

  108 LIST_SPEC_QUAL: REGULAR_TYPE LIST_SPEC_QUAL
  109               | REGULAR_TYPE
  110               | QUALIFIER_TYPE LIST_SPEC_QUAL
  111               | QUALIFIER_TYPE

  112 LIST_STRUCT_DECLARATOR: STRUCT_DECLARATOR
  113                       | LIST_STRUCT_DECLARATOR T_DH STRUCT_DECLARATOR

  114 STRUCT_DECLARATOR: DECLARATOR
  115                  | T_MH REGULAR_EXPR
  116                  | DECLARATOR T_MH REGULAR_EXPR

  117 SPECIFIER_ENUM: T_K_ENUM T_LDKH LIST_ENUMERATOR T_RDKH
  118               | T_K_ENUM T_ID T_LDKH LIST_ENUMERATOR T_RDKH
  119               | T_K_ENUM T_ID

  120 LIST_ENUMERATOR: ENUMERATOR
  121                | LIST_ENUMERATOR T_DH ENUMERATOR

  122 ENUMERATOR: T_ID
  123           | T_ID T_ASSIGN REGULAR_EXPR

  124 QUALIFIER_TYPE: T_K_CONST
  125               | T_K_VOLATILE

  126 DECLARATOR: POINTER DECLARATOR_DIRECT
  127           | DECLARATOR_DIRECT

  128 DECLARATOR_DIRECT: T_ID
  129                  | T_LXKH DECLARATOR T_RXKH
  130                  | DECLARATOR_DIRECT T_LZKH REGULAR_EXPR T_RZKH
  131                  | DECLARATOR_DIRECT T_LZKH T_RZKH
  132                  | DECLARATOR_DIRECT T_LXKH LIST_PARAM_TYPE T_RXKH
  133                  | DECLARATOR_DIRECT T_LXKH LIST_IDENTIFIER T_RXKH
  134                  | DECLARATOR_DIRECT T_LXKH T_RXKH

  135 POINTER: T_MUL
  136        | T_MUL LIST_QUALIFIER_TYPE
  137        | T_MUL POINTER
  138        | T_MUL LIST_QUALIFIER_TYPE POINTER

  139 LIST_QUALIFIER_TYPE: QUALIFIER_TYPE
  140                    | LIST_QUALIFIER_TYPE QUALIFIER_TYPE

  141 LIST_PARAM_TYPE: LIST_PARAMETER
  142                | LIST_PARAMETER T_DH T_XLH

  143 LIST_PARAMETER: DECLARATION_PARAMETER
  144               | LIST_PARAMETER T_DH DECLARATION_PARAMETER

  145 DECLARATION_PARAMETER: TYPE_PART DECLARATOR
  146                      | TYPE_PART DECLARATOR_ABSTRACT
  147                      | TYPE_PART

  148 LIST_IDENTIFIER: T_ID
  149                | LIST_IDENTIFIER T_DH T_ID

  150 TYPE: LIST_SPEC_QUAL
  151     | LIST_SPEC_QUAL DECLARATOR_ABSTRACT

  152 DECLARATOR_ABSTRACT: POINTER
  153                    | DECLARATOR_DIRECT_ABSTRACT
  154                    | POINTER DECLARATOR_DIRECT_ABSTRACT

  155 DECLARATOR_DIRECT_ABSTRACT: T_LXKH DECLARATOR_ABSTRACT T_RXKH
  156                           | T_LZKH REGULAR_EXPR T_RZKH
  157                           | DECLARATOR_DIRECT_ABSTRACT T_LZKH T_RZKH
  158                           | DECLARATOR_DIRECT_ABSTRACT T_LXKH T_RXKH
  159                           | T_LXKH LIST_PARAM_TYPE T_RXKH
  160                           | T_LZKH T_RZKH
  161                           | T_LXKH T_RXKH
  162                           | DECLARATOR_DIRECT_ABSTRACT T_LZKH REGULAR_EXPR T_RZKH
  163                           | DECLARATOR_DIRECT_ABSTRACT T_LXKH LIST_PARAM_TYPE T_RXKH

  164 INITIALIZER: ASSIGN_EXPR
  165            | T_LXKH LIST_INITIALIZER T_RXKH
  166            | T_LXKH LIST_INITIALIZER T_DH T_RXKH

  167 LIST_INITIALIZER: INITIALIZER
  168                 | LIST_INITIALIZER T_DH INITIALIZER

  169 STATEMENT: CASE_STATEMENT
  170          | STATEMENTS
  171          | EXPR_STATEMENT
  172          | SELECTION_STATEMENT
  173          | ITERATION_STATEMENT
  174          | JUMP_STATEMENT
  175          | LIST_DECLARATION

  176 CASE_STATEMENT: T_ID T_MH STATEMENT
  177               | T_K_CASE REGULAR_EXPR T_MH STATEMENT
  178               | T_K_DEFAULT T_MH STATEMENT

  179 STATEMENTS: T_LDKH T_RDKH
  180           | T_LDKH STATEMENT_SEQUENCE T_RDKH

  181 LIST_DECLARATION: DECLARATION
  182                 | LIST_DECLARATION DECLARATION

  183 STATEMENT_SEQUENCE: STATEMENT
  184                   | STATEMENT_SEQUENCE STATEMENT

  185 EXPR_STATEMENT: T_FH
  186               | EXPR T_FH

  187 SELECTION_STATEMENT: T_K_IF T_LXKH EXPR T_RXKH STATEMENT
  188                    | T_K_IF T_LXKH EXPR T_RXKH STATEMENT T_K_ELSE STATEMENT
  189                    | T_K_SWITCH T_LXKH EXPR T_RXKH STATEMENT

  190 ITERATION_STATEMENT: T_K_WHILE T_LXKH EXPR T_RXKH STATEMENT
  191                    | T_K_DO STATEMENT T_K_WHILE T_LXKH EXPR T_RXKH T_FH
  192                    | T_K_FOR T_LXKH EXPR_STATEMENT EXPR_STATEMENT T_RXKH STATEMENT
  193                    | T_K_FOR T_LXKH EXPR_STATEMENT EXPR_STATEMENT EXPR T_RXKH STATEMENT

  194 JUMP_STATEMENT: T_K_GOTO T_ID T_FH
  195               | T_K_CONTINUE T_FH
  196               | T_K_BREAK T_FH
  197               | T_K_RETURN T_FH
  198               | T_K_RETURN EXPR T_FH

  199 PROGRAM: EXTERNAL_OBJECT
  200        | PROGRAM EXTERNAL_OBJECT

  201 EXTERNAL_OBJECT: DECLARATION
  202                | FUNCTION

  203 FUNCTION: TYPE_PART DECLARATOR T_FH
  204         | TYPE_PART DECLARATOR STATEMENTS


Terminals, with rules where they appear

$end (0) 0
error (256)
T_K_INT (258) 92
T_K_RETURN (259) 197 198
T_K_STRUCT (260) 103
T_K_FOR (261) 192 193
T_K_DOUBLE (262) 95
T_K_FLOAT (263) 94
T_K_IF (264) 187 188
T_K_ELSE (265) 188
T_K_SWITCH (266) 189
T_K_WHILE (267) 190 191
T_K_DEFAULT (268) 178
T_K_TYPEDEF (269) 86
T_K_SIZEOF (270) 22 23
T_K_STATIC (271) 88
T_K_EXTERN (272) 87
T_K_VOID (273) 89
T_K_CHAR (274) 90
T_K_SHORT (275) 91
T_K_LONG (276) 93
T_K_SIGNED (277) 96
T_K_UNSIGNED (278) 97
T_K_UNION (279) 104
T_K_ENUM (280) 117 118 119
T_K_CONST (281) 124
T_K_VOLATILE (282) 125
T_K_CASE (283) 177
T_K_DO (284) 191
T_K_GOTO (285) 194
T_K_CONTINUE (286) 195
T_K_BREAK (287) 196
T_ID (288) 2 12 13 100 102 118 119 122 123 128 148 149 176 194
T_JH (289)
T_AND (290) 24 51
T_OR (291) 55
T_XOR (292) 53
T_QF (293) 25
T_NOT (294) 26
T_LAND (295) 57
T_LOR (296) 59
T_SHIFT_LEFT (297) 40
T_SHIFT_RIGHT (298) 41
T_K_AUTO (299)
T_LDKH (300) 100 101 117 118 179 180
T_RDKH (301) 100 101 117 118 179 180
T_LXKH (302) 7 10 11 23 31 129 132 133 134 155 158 159 161 163 165
    166 187 188 189 190 191 192 193
T_RXKH (303) 7 10 11 23 31 129 132 133 134 155 158 159 161 163 165
    166 187 188 189 190 191 192 193
T_LZKH (304) 9 130 131 156 157 160 162
T_RZKH (305) 9 130 131 156 157 160 162
T_FH (306) 74 75 107 185 186 191 194 195 196 197 198 203
T_WH (307) 61
T_MH (308) 61 115 116 176 177 178
T_ARROW (309) 13
T_EQ (310) 48
T_NEQ (311) 49
T_RFKH (312)
T_LT (313) 43
T_GT (314) 44
T_ASSIGN (315) 64 85 123
T_ADD_ASSIGN (316) 65
T_SUB_ASSIGN (317) 66
T_MUL_ASSIGN (318) 67
T_DIV_ASSIGN (319) 68
T_OR_ASSIGN (320) 70
T_AND_ASSIGN (321) 69
T_XLH (322) 142
T_MINUS (323) 29 38
T_ADD (324) 28 37
T_MUL (325) 27 33 135 136 137 138
T_DH (326) 17 72 83 113 121 142 144 149 166 168
T_LE (327) 45
T_GE (328) 46
T_ADDADD (329) 14 19
T_SUBSUB (330) 15 20
T_DOT (331) 12
T_DIV (332) 34
T_MOD (333) 35
T_V_CHAR (334) 5
T_V_FLOAT (335) 4
T_V_INTEGER (336) 3
T_V_STRING (337) 6


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
ROOT (84)
    on left: 1, on right: 0
BASIC_EXPR (85)
    on left: 2 3 4 5 6 7, on right: 8
POSTFIX_EXPR (86)
    on left: 8 9 10 11 12 13 14 15, on right: 9 10 11 12 13 14 15 18
AGR_LIST (87)
    on left: 16 17, on right: 11 17
UNARY_EXPR (88)
    on left: 18 19 20 21 22 23, on right: 19 20 22 30 63
OPR_UNARY (89)
    on left: 24 25 26 27 28 29, on right: 21
CAST_EXPR (90)
    on left: 30 31, on right: 21 31 32 33 34 35
MUL_EXPR (91)
    on left: 32 33 34 35, on right: 33 34 35 36 37 38
ADD_EXPR (92)
    on left: 36 37 38, on right: 37 38 39 40 41
SHIFT_EXPR (93)
    on left: 39 40 41, on right: 40 41 42 43 44 45 46
RELATION_EXPR (94)
    on left: 42 43 44 45 46, on right: 43 44 45 46 47 48 49
EQ_EXPR (95)
    on left: 47 48 49, on right: 48 49 50 51
AND_EXPR (96)
    on left: 50 51, on right: 51 52 53
XOR_EXPR (97)
    on left: 52 53, on right: 53 54 55
OR_EXPR (98)
    on left: 54 55, on right: 55 56 57
LOGIC_AND_EXPR (99)
    on left: 56 57, on right: 57 58 59
LOGIC_OR_EXPR (100)
    on left: 58 59, on right: 59 60 61
CONDITION_EXPR (101)
    on left: 60 61, on right: 61 62 73
ASSIGN_EXPR (102)
    on left: 62 63, on right: 16 17 63 71 72 164
ASSIGN (103)
    on left: 64 65 66 67 68 69 70, on right: 63
EXPR (104)
    on left: 71 72, on right: 7 9 61 72 186 187 188 189 190 191 193
    198
REGULAR_EXPR (105)
    on left: 73, on right: 115 116 123 130 156 162 177
DECLARATION (106)
    on left: 74 75, on right: 181 182 201
TYPE_PART (107)
    on left: 76 77 78 79 80 81, on right: 74 75 77 79 81 145 146 147
    203 204
TERMS_LIST (108)
    on left: 82 83, on right: 75 83
TERM (109)
    on left: 84 85, on right: 82 83
STORE_CLASS (110)
    on left: 86 87 88, on right: 76 77
REGULAR_TYPE (111)
    on left: 89 90 91 92 93 94 95 96 97 98 99, on right: 78 79 108
    109
STRUCT_UNION_TYPE (112)
    on left: 100 101 102, on right: 98
STRUCT_UNION (113)
    on left: 103 104, on right: 100 101 102
STRUCT_UNION_LIST (114)
    on left: 105 106, on right: 100 101 106
STRUCT_UNION_DECLARATION (115)
    on left: 107, on right: 105 106
LIST_SPEC_QUAL (116)
    on left: 108 109 110 111, on right: 107 108 110 150 151
LIST_STRUCT_DECLARATOR (117)
    on left: 112 113, on right: 107 113
STRUCT_DECLARATOR (118)
    on left: 114 115 116, on right: 112 113
SPECIFIER_ENUM (119)
    on left: 117 118 119, on right: 99
LIST_ENUMERATOR (120)
    on left: 120 121, on right: 117 118 121
ENUMERATOR (121)
    on left: 122 123, on right: 120 121
QUALIFIER_TYPE (122)
    on left: 124 125, on right: 80 81 110 111 139 140
DECLARATOR (123)
    on left: 126 127, on right: 84 85 114 116 129 145 203 204
DECLARATOR_DIRECT (124)
    on left: 128 129 130 131 132 133 134, on right: 126 127 130 131
    132 133 134
POINTER (125)
    on left: 135 136 137 138, on right: 126 137 138 152 154
LIST_QUALIFIER_TYPE (126)
    on left: 139 140, on right: 136 138 140
LIST_PARAM_TYPE (127)
    on left: 141 142, on right: 132 159 163
LIST_PARAMETER (128)
    on left: 143 144, on right: 141 142 144
DECLARATION_PARAMETER (129)
    on left: 145 146 147, on right: 143 144
LIST_IDENTIFIER (130)
    on left: 148 149, on right: 133 149
TYPE (131)
    on left: 150 151, on right: 23 31
DECLARATOR_ABSTRACT (132)
    on left: 152 153 154, on right: 146 151 155
DECLARATOR_DIRECT_ABSTRACT (133)
    on left: 155 156 157 158 159 160 161 162 163, on right: 153 154
    157 158 162 163
INITIALIZER (134)
    on left: 164 165 166, on right: 85 167 168
LIST_INITIALIZER (135)
    on left: 167 168, on right: 165 166 168
STATEMENT (136)
    on left: 169 170 171 172 173 174 175, on right: 176 177 178 183
    184 187 188 189 190 191 192 193
CASE_STATEMENT (137)
    on left: 176 177 178, on right: 169
STATEMENTS (138)
    on left: 179 180, on right: 170 204
LIST_DECLARATION (139)
    on left: 181 182, on right: 175 182
STATEMENT_SEQUENCE (140)
    on left: 183 184, on right: 180 184
EXPR_STATEMENT (141)
    on left: 185 186, on right: 171 192 193
SELECTION_STATEMENT (142)
    on left: 187 188 189, on right: 172
ITERATION_STATEMENT (143)
    on left: 190 191 192 193, on right: 173
JUMP_STATEMENT (144)
    on left: 194 195 196 197 198, on right: 174
PROGRAM (145)
    on left: 199 200, on right: 1 200
EXTERNAL_OBJECT (146)
    on left: 201 202, on right: 199 200
FUNCTION (147)
    on left: 203 204, on right: 202


State 0

    0 $accept: . ROOT $end

    T_K_INT       shift, and go to state 1
    T_K_STRUCT    shift, and go to state 2
    T_K_DOUBLE    shift, and go to state 3
    T_K_FLOAT     shift, and go to state 4
    T_K_TYPEDEF   shift, and go to state 5
    T_K_STATIC    shift, and go to state 6
    T_K_EXTERN    shift, and go to state 7
    T_K_VOID      shift, and go to state 8
    T_K_CHAR      shift, and go to state 9
    T_K_SHORT     shift, and go to state 10
    T_K_LONG      shift, and go to state 11
    T_K_SIGNED    shift, and go to state 12
    T_K_UNSIGNED  shift, and go to state 13
    T_K_UNION     shift, and go to state 14
    T_K_ENUM      shift, and go to state 15
    T_K_CONST     shift, and go to state 16
    T_K_VOLATILE  shift, and go to state 17

    ROOT               go to state 18
    DECLARATION        go to state 19
    TYPE_PART          go to state 20
    STORE_CLASS        go to state 21
    REGULAR_TYPE       go to state 22
    STRUCT_UNION_TYPE  go to state 23
    STRUCT_UNION       go to state 24
    SPECIFIER_ENUM     go to state 25
    QUALIFIER_TYPE     go to state 26
    PROGRAM            go to state 27
    EXTERNAL_OBJECT    go to state 28
    FUNCTION           go to state 29


State 1

   92 REGULAR_TYPE: T_K_INT .

    $default  reduce using rule 92 (REGULAR_TYPE)


State 2

  103 STRUCT_UNION: T_K_STRUCT .

    $default  reduce using rule 103 (STRUCT_UNION)


State 3

   95 REGULAR_TYPE: T_K_DOUBLE .

    $default  reduce using rule 95 (REGULAR_TYPE)


State 4

   94 REGULAR_TYPE: T_K_FLOAT .

    $default  reduce using rule 94 (REGULAR_TYPE)


State 5

   86 STORE_CLASS: T_K_TYPEDEF .

    $default  reduce using rule 86 (STORE_CLASS)


State 6

   88 STORE_CLASS: T_K_STATIC .

    $default  reduce using rule 88 (STORE_CLASS)


State 7

   87 STORE_CLASS: T_K_EXTERN .

    $default  reduce using rule 87 (STORE_CLASS)


State 8

   89 REGULAR_TYPE: T_K_VOID .

    $default  reduce using rule 89 (REGULAR_TYPE)


State 9

   90 REGULAR_TYPE: T_K_CHAR .

    $default  reduce using rule 90 (REGULAR_TYPE)


State 10

   91 REGULAR_TYPE: T_K_SHORT .

    $default  reduce using rule 91 (REGULAR_TYPE)


State 11

   93 REGULAR_TYPE: T_K_LONG .

    $default  reduce using rule 93 (REGULAR_TYPE)


State 12

   96 REGULAR_TYPE: T_K_SIGNED .

    $default  reduce using rule 96 (REGULAR_TYPE)


State 13

   97 REGULAR_TYPE: T_K_UNSIGNED .

    $default  reduce using rule 97 (REGULAR_TYPE)


State 14

  104 STRUCT_UNION: T_K_UNION .

    $default  reduce using rule 104 (STRUCT_UNION)


State 15

  117 SPECIFIER_ENUM: T_K_ENUM . T_LDKH LIST_ENUMERATOR T_RDKH
  118               | T_K_ENUM . T_ID T_LDKH LIST_ENUMERATOR T_RDKH
  119               | T_K_ENUM . T_ID

    T_ID    shift, and go to state 30
    T_LDKH  shift, and go to state 31


State 16

  124 QUALIFIER_TYPE: T_K_CONST .

    $default  reduce using rule 124 (QUALIFIER_TYPE)


State 17

  125 QUALIFIER_TYPE: T_K_VOLATILE .

    $default  reduce using rule 125 (QUALIFIER_TYPE)


State 18

    0 $accept: ROOT . $end

    $end  shift, and go to state 32


State 19

  201 EXTERNAL_OBJECT: DECLARATION .

    $default  reduce using rule 201 (EXTERNAL_OBJECT)


State 20

   74 DECLARATION: TYPE_PART . T_FH
   75            | TYPE_PART . TERMS_LIST T_FH
  203 FUNCTION: TYPE_PART . DECLARATOR T_FH
  204         | TYPE_PART . DECLARATOR STATEMENTS

    T_ID    shift, and go to state 33
    T_LXKH  shift, and go to state 34
    T_FH    shift, and go to state 35
    T_MUL   shift, and go to state 36

    TERMS_LIST         go to state 37
    TERM               go to state 38
    DECLARATOR         go to state 39
    DECLARATOR_DIRECT  go to state 40
    POINTER            go to state 41


State 21

   76 TYPE_PART: STORE_CLASS .
   77          | STORE_CLASS . TYPE_PART

    T_K_INT       shift, and go to state 1
    T_K_STRUCT    shift, and go to state 2
    T_K_DOUBLE    shift, and go to state 3
    T_K_FLOAT     shift, and go to state 4
    T_K_TYPEDEF   shift, and go to state 5
    T_K_STATIC    shift, and go to state 6
    T_K_EXTERN    shift, and go to state 7
    T_K_VOID      shift, and go to state 8
    T_K_CHAR      shift, and go to state 9
    T_K_SHORT     shift, and go to state 10
    T_K_LONG      shift, and go to state 11
    T_K_SIGNED    shift, and go to state 12
    T_K_UNSIGNED  shift, and go to state 13
    T_K_UNION     shift, and go to state 14
    T_K_ENUM      shift, and go to state 15
    T_K_CONST     shift, and go to state 16
    T_K_VOLATILE  shift, and go to state 17

    $default  reduce using rule 76 (TYPE_PART)

    TYPE_PART          go to state 42
    STORE_CLASS        go to state 21
    REGULAR_TYPE       go to state 22
    STRUCT_UNION_TYPE  go to state 23
    STRUCT_UNION       go to state 24
    SPECIFIER_ENUM     go to state 25
    QUALIFIER_TYPE     go to state 26


State 22

   78 TYPE_PART: REGULAR_TYPE .
   79          | REGULAR_TYPE . TYPE_PART

    T_K_INT       shift, and go to state 1
    T_K_STRUCT    shift, and go to state 2
    T_K_DOUBLE    shift, and go to state 3
    T_K_FLOAT     shift, and go to state 4
    T_K_TYPEDEF   shift, and go to state 5
    T_K_STATIC    shift, and go to state 6
    T_K_EXTERN    shift, and go to state 7
    T_K_VOID      shift, and go to state 8
    T_K_CHAR      shift, and go to state 9
    T_K_SHORT     shift, and go to state 10
    T_K_LONG      shift, and go to state 11
    T_K_SIGNED    shift, and go to state 12
    T_K_UNSIGNED  shift, and go to state 13
    T_K_UNION     shift, and go to state 14
    T_K_ENUM      shift, and go to state 15
    T_K_CONST     shift, and go to state 16
    T_K_VOLATILE  shift, and go to state 17

    $default  reduce using rule 78 (TYPE_PART)

    TYPE_PART          go to state 43
    STORE_CLASS        go to state 21
    REGULAR_TYPE       go to state 22
    STRUCT_UNION_TYPE  go to state 23
    STRUCT_UNION       go to state 24
    SPECIFIER_ENUM     go to state 25
    QUALIFIER_TYPE     go to state 26


State 23

   98 REGULAR_TYPE: STRUCT_UNION_TYPE .

    $default  reduce using rule 98 (REGULAR_TYPE)


State 24

  100 STRUCT_UNION_TYPE: STRUCT_UNION . T_ID T_LDKH STRUCT_UNION_LIST T_RDKH
  101                  | STRUCT_UNION . T_LDKH STRUCT_UNION_LIST T_RDKH
  102                  | STRUCT_UNION . T_ID

    T_ID    shift, and go to state 44
    T_LDKH  shift, and go to state 45


State 25

   99 REGULAR_TYPE: SPECIFIER_ENUM .

    $default  reduce using rule 99 (REGULAR_TYPE)


State 26

   80 TYPE_PART: QUALIFIER_TYPE .
   81          | QUALIFIER_TYPE . TYPE_PART

    T_K_INT       shift, and go to state 1
    T_K_STRUCT    shift, and go to state 2
    T_K_DOUBLE    shift, and go to state 3
    T_K_FLOAT     shift, and go to state 4
    T_K_TYPEDEF   shift, and go to state 5
    T_K_STATIC    shift, and go to state 6
    T_K_EXTERN    shift, and go to state 7
    T_K_VOID      shift, and go to state 8
    T_K_CHAR      shift, and go to state 9
    T_K_SHORT     shift, and go to state 10
    T_K_LONG      shift, and go to state 11
    T_K_SIGNED    shift, and go to state 12
    T_K_UNSIGNED  shift, and go to state 13
    T_K_UNION     shift, and go to state 14
    T_K_ENUM      shift, and go to state 15
    T_K_CONST     shift, and go to state 16
    T_K_VOLATILE  shift, and go to state 17

    $default  reduce using rule 80 (TYPE_PART)

    TYPE_PART          go to state 46
    STORE_CLASS        go to state 21
    REGULAR_TYPE       go to state 22
    STRUCT_UNION_TYPE  go to state 23
    STRUCT_UNION       go to state 24
    SPECIFIER_ENUM     go to state 25
    QUALIFIER_TYPE     go to state 26


State 27

    1 ROOT: PROGRAM .
  200 PROGRAM: PROGRAM . EXTERNAL_OBJECT

    T_K_INT       shift, and go to state 1
    T_K_STRUCT    shift, and go to state 2
    T_K_DOUBLE    shift, and go to state 3
    T_K_FLOAT     shift, and go to state 4
    T_K_TYPEDEF   shift, and go to state 5
    T_K_STATIC    shift, and go to state 6
    T_K_EXTERN    shift, and go to state 7
    T_K_VOID      shift, and go to state 8
    T_K_CHAR      shift, and go to state 9
    T_K_SHORT     shift, and go to state 10
    T_K_LONG      shift, and go to state 11
    T_K_SIGNED    shift, and go to state 12
    T_K_UNSIGNED  shift, and go to state 13
    T_K_UNION     shift, and go to state 14
    T_K_ENUM      shift, and go to state 15
    T_K_CONST     shift, and go to state 16
    T_K_VOLATILE  shift, and go to state 17

    $default  reduce using rule 1 (ROOT)

    DECLARATION        go to state 19
    TYPE_PART          go to state 20
    STORE_CLASS        go to state 21
    REGULAR_TYPE       go to state 22
    STRUCT_UNION_TYPE  go to state 23
    STRUCT_UNION       go to state 24
    SPECIFIER_ENUM     go to state 25
    QUALIFIER_TYPE     go to state 26
    EXTERNAL_OBJECT    go to state 47
    FUNCTION           go to state 29


State 28

  199 PROGRAM: EXTERNAL_OBJECT .

    $default  reduce using rule 199 (PROGRAM)


State 29

  202 EXTERNAL_OBJECT: FUNCTION .

    $default  reduce using rule 202 (EXTERNAL_OBJECT)


State 30

  118 SPECIFIER_ENUM: T_K_ENUM T_ID . T_LDKH LIST_ENUMERATOR T_RDKH
  119               | T_K_ENUM T_ID .

    T_LDKH  shift, and go to state 48

    $default  reduce using rule 119 (SPECIFIER_ENUM)


State 31

  117 SPECIFIER_ENUM: T_K_ENUM T_LDKH . LIST_ENUMERATOR T_RDKH

    T_ID  shift, and go to state 49

    LIST_ENUMERATOR  go to state 50
    ENUMERATOR       go to state 51


State 32

    0 $accept: ROOT $end .

    $default  accept


State 33

  128 DECLARATOR_DIRECT: T_ID .

    $default  reduce using rule 128 (DECLARATOR_DIRECT)


State 34

  129 DECLARATOR_DIRECT: T_LXKH . DECLARATOR T_RXKH

    T_ID    shift, and go to state 33
    T_LXKH  shift, and go to state 34
    T_MUL   shift, and go to state 36

    DECLARATOR         go to state 52
    DECLARATOR_DIRECT  go to state 40
    POINTER            go to state 41


State 35

   74 DECLARATION: TYPE_PART T_FH .

    $default  reduce using rule 74 (DECLARATION)


State 36

  135 POINTER: T_MUL .
  136        | T_MUL . LIST_QUALIFIER_TYPE
  137        | T_MUL . POINTER
  138        | T_MUL . LIST_QUALIFIER_TYPE POINTER

    T_K_CONST     shift, and go to state 16
    T_K_VOLATILE  shift, and go to state 17
    T_MUL         shift, and go to state 36

    $default  reduce using rule 135 (POINTER)

    QUALIFIER_TYPE       go to state 53
    POINTER              go to state 54
    LIST_QUALIFIER_TYPE  go to state 55


State 37

   75 DECLARATION: TYPE_PART TERMS_LIST . T_FH
   83 TERMS_LIST: TERMS_LIST . T_DH TERM

    T_FH  shift, and go to state 56
    T_DH  shift, and go to state 57


State 38

   82 TERMS_LIST: TERM .

    $default  reduce using rule 82 (TERMS_LIST)


State 39

   84 TERM: DECLARATOR .
   85     | DECLARATOR . T_ASSIGN INITIALIZER
  203 FUNCTION: TYPE_PART DECLARATOR . T_FH
  204         | TYPE_PART DECLARATOR . STATEMENTS

    T_LDKH    shift, and go to state 58
    T_FH      shift, and go to state 59
    T_ASSIGN  shift, and go to state 60

    T_FH      [reduce using rule 84 (TERM)]
    $default  reduce using rule 84 (TERM)

    STATEMENTS  go to state 61


State 40
